--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
         <http.client.version>4.5.2</http.client.version>
         <spring.amqp.version>1.5.6.RELEASE</spring.amqp.version>
         <fastjson.version>1.2.21</fastjson.version>
+        <shiro.version>1.3.2</shiro.version>
+        <jedis.version>2.9.0</jedis.version>
+        <spring.data.redis.version>1.7.6.RELEASE</spring.data.redis.version>
+        <google.version>1.0</google.version>
         <!--plugin的属性定义-->
         <jdk.version>1.6</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -152,6 +156,30 @@
             <version>${fastjson.version}</version>
         </dependency>
 
+        <!--shiro-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${shiro.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>${spring.data.redis.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
+            <version>${google.version}</version>
+        </dependency>
 
     </dependencies>
 
