--- a/src/main/webapp/WEB-INF/context.properties
+++ b/src/main/webapp/WEB-INF/context.properties
@@ -1,1 +1,17 @@
 server.deploy=local
+# Session Cookie Name
+session.cookie.name=USID
+# Session validate enable?
+session.validate.enable=false
+session.validate.interval=180000
+#redis
+jedis.pool.maxIdle=10
+jedis.pool.minIdle=5
+jedis.pool.maxWaitMillis=2000
+jedis.pool.testOnBorrow=true
+redis.host=127.0.0.1
+redis.port=6379
+redis.password=
+redis.database=1
+app.name=atheawap
+session.prefix=s
